# LOKI

./: .gitignore  LICENSE  README.md  pyproject.toml  res.app.js  res.index.html  res.style.css
.github/workflows/: publish.yml  test.yml
docs/superpowers/plans/: 2026-06-20-loki-implementation.md
docs/superpowers/specs/: 2026-06-20-loki-design.md
loki/: __init__.py  cli.py
loki/ai/: __init__.py  chat.py  guardrails.py  rag.py  system_prompt.py
loki/ai/providers/: __init__.py  anthropic.py  base.py  groq.py  openai_provider.py  openrouter.py
loki/commands/: ai_cmd.py  capture_cmd.py  describe_cmd.py  errors_cmd.py  exit_cmd.py  fix_cmd.py  init_cmd.py  inject_cmd.py  models_cmd.py  report_cmd.py  show_cmd.py  watch_cmd.py
loki/core/: __init__.py  cache.py  config.py  errors.py  global_hook.py  runtime_capture.py  scanner.py  types.py
loki/security/: __init__.py  cache_security.py  integrity.py  leak_prevention.py  secret_manager.py  secure_delete.py
loki/ui/: __init__.py  routes.py  security.py  server.py
loki/ui/static/: app.js  index.html  style.css
tests/: __init__.py  test_cache.py  test_commands.py  test_errors.py  test_providers.py  test_scanner.py  test_security.py
